<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>edu.mit.scansite</groupId>
	<artifactId>scansite</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<url>https://scansite4.mit.edu</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<revision>4.0.24-SNAPSHOT</revision>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.gwt</groupId>
				<artifactId>gwt</artifactId>
				<version>2.9.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>net.customware.gwt.dispatch</groupId>
				<artifactId>gwt-dispatch</artifactId>
				<version>1.2.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<resources>
			<resource>
				<filtering>false</filtering>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
		</resources>
		<finalName>4.0</finalName> <!-- domain access using scansite4.mit.edu/4.0/ -->
		<!-- This way you can easily deploy various Scansite versions on a single 
			machine just by editing the version number -->
		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
		<plugins>
			<plugin>
				<groupId>net.ltgt.gwt.maven</groupId>
				<artifactId>gwt-maven-plugin</artifactId>
				<inherited>false</inherited>
				<configuration>
					<launcherDir>${project.build.directory}/gwt/launcherDir</launcherDir>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<release>11</release>
						<!-- <source>1.8</source> <target>1.8</target> -->
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>jetty-maven-plugin</artifactId>
					<version>9.4.35.v20201120</version>
				</plugin>
				<plugin>
					<groupId>net.ltgt.gwt.maven</groupId>
					<artifactId>gwt-maven-plugin</artifactId>
					<version>1.0.0</version>
					<extensions>true</extensions>
					<configuration>
						<sourceLevel>11</sourceLevel>
						<failOnError>true</failOnError>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>package</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<modules>
		<module>scansite-client</module>
		<module>scansite-shared</module>
		<module>scansite-server</module>
	</modules>
</project>
